[package]
name = "acolor"
description = "Simple color types, operations and conversions."
version = "0.0.7"
edition = "2021"
rust-version = "1.71.1" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/acolor"
documentation = "https://docs.rs/acolor"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["graphics", "no-std::no-alloc"]
keywords = ["color", "rgb", "lab"]
publish = true

[features]
default = ["std", "approx"]

std = ["alloc", "iunorm/std", "devela/std", "tiny-skia?/std", "approx?/std"]
alloc = ["devela/alloc"] # features that depend on allocation (unused)
no-std = ["libm", "approx", "tiny-skia?/no-std-float"]

safe = [] # forbid unsafe at the crate level
safest = ["safe", "devela/safe"] # forbid unsafe recursively

unsafe = [] # enable unsafe alternatives
unsafest = ["unsafe", "devela/unsafe"] # enable unsafe recursively

nightly = [] # used only for better docs
nightly_docs = ["nightly", "complete", "notcurses?/vendored"]

complete = ["macroquad", "notcurses", "rgb", "sdl2", "tiny-skia"]


[dependencies]
devela = { version = "0.7.1", default-features = false }
iunorm = { version = "0.2.1", default-features= false }

#/ optional #/

approx = { version = "0.5.1", optional = true, default-features = false }
libm = { version = "0.2.6", optional = true }

#/ external formats /#

macroquad = { version = "0.3.25", optional = true, default-features = false }
notcurses = { version = "3.3.1", optional = true }
rgb = { version = "0.8.36", optional = true, default-features = false }
sdl2 = { version = "0.35.2", optional = true, default-features = false, features = ["gfx"] }
# tiny-skia needs either `std` or `no-std` feature.
tiny-skia = { version = "0.9.0", optional = true, default-features = false }

[package.metadata.docs.rs]
no-default-features = true
features = [ "nightly_docs" ]

[badges]
maintenance = { status = "experimental" }
