[package]
name = "acolor"
description = "Simple color types, operations and conversions."
version = "0.0.10"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/acolor"
documentation = "https://docs.rs/acolor"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["graphics", "no-std::no-alloc"]
keywords = ["color", "rgb", "lab"]
publish = true

# ------------------------------------------------------------------------------

[features]
default = []

#* environment features *#
# (not enabling "std" declares the library as "no_std")
std = [ # enables features that depend on the standard library
	"alloc",
	"iunorm/std", "devela/std", "tiny-skia?/std", "approx?/std",
]
alloc = ["devela/alloc"] # enables features that depend on allocation (unused)
no_std = [ # enables features incompatible with the standard library
	"libm", "approx", "tiny-skia?/no-std-float",
]

#* safety features *#
safe = [] # forbids unsafe at the crate level
safest = ["safe", "devela/safest"] # forbids unsafe recursively
unsafe = [] # enables all the unsafe features at the crate level (unused)
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively (unused)

#* nightly features *#
nightly = [] # enables the nightly features
nightly_docs = [ # features for docs.rs
	"nightly", "full", "std", "full",
	"notcurses?/vendored",
	"devela/nightly_docs",
]

#* deprecated features *#
no-std = ["no_std"] # since 0.0.10
complete = ["full"] # since 0.0.11

# other features
full = ["approx", "macroquad", "notcurses", "rgb", "sdl2", "tiny-skia"]

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"
iunorm = "0.2.2"

#* optional dependencies *#
approx = { version = "0.5.1", optional = true, default-features = false }
libm = { version = "0.2.6", optional = true }

#* optional supported external types */
macroquad = { version = "0.4.2", optional = true, default-features = false }
notcurses = { version = "3.5.0", optional = true }
rgb = { version = "0.8.36", optional = true, default-features = false }
sdl2 = { version = "0.35.2", optional = true, default-features = false, features = ["gfx"] }
# needs either `std` or `no_std` feature:
tiny-skia = { version = "0.11.1", optional = true, default-features = false }

[dev-dependencies]

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = [ "nightly_docs" ]

[badges]
maintenance = { status = "experimental" }
