[package]
name = "acolor"
description = "Color representations, operations and conversions."
version = "0.0.10"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/acolor"
documentation = "https://docs.rs/acolor"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["graphics", "no-std::no-alloc"]
keywords = ["color", "rgb", "lab"]
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = [ # enables optional capabilities in this crate
	"approx", "macroquad", "notcurses", "rgb", "sdl2",
	# NOTE: tiny-skia doesn't work without either `std` or `no_std`
]
full_std = ["std", "full", "tiny-skia"]
full_no_std = ["no_std", "full", "tiny-skia"]

#* environment features *#
std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc",
	"iunorm/std", "devela/std", "tiny-skia?/std", "approx?/std", # RETHINK
]
alloc = ["devela/alloc"] # enables `alloc` functionality (unused)
no_std = [ # enables functionality incompatible with `std`
	"libm", "approx", "tiny-skia?/no-std-float",
]

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively
unsafe = [] # enables unsafe features (unused)
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbids unsafe recursively

#* nightly features *#
nightly = [] # enables nightly features
nightly_docs = [ # enables features for docs.rs
	"nightly", "full", "std", "full",
	"notcurses?/vendored",
	"devela/nightly_docs",
]

#* deprecated features *#
no-std = ["no_std"] # since 0.0.10
complete = ["full"] # since 0.0.11

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"
iunorm = "0.2.2"

#* optional dependencies *#
approx = { version = "0.5.1", optional = true, default-features = false }
libm = { version = "0.2.6", optional = true }

#* optional supported external types */
macroquad = { version = "0.4.2", optional = true, default-features = false }
notcurses = { version = "3.5.0", optional = true }
rgb = { version = "0.8.36", optional = true, default-features = false }
sdl2 = { version = "0.35.2", optional = true, default-features = false, features = ["gfx"] }
# needs either `std` or `no_std` feature:
tiny-skia = { version = "0.11.1", optional = true, default-features = false }

[dev-dependencies]

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = [ "nightly_docs" ]

[badges]
maintenance = { status = "experimental" }
